--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "estacionamento",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./src/index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
